Adaptive for 320px

--- a/04_Merch.html
+++ b/04_Merch.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="04_Merch.css">
 </head>
 <body>
-    <a href="01_MainPage.html"><img src="shapkapngnorm.png" alt="NB"></a>
+    <a href="01_MainPage.html"><img class="shapka" src="shapkapngnorm.png" alt="NB"></a>
    <br> 
    <br>
    <p id="con1"><a class="buttons" href="index.html"><strong>О нас</strong></a>
