--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <h1>Участники</h1>
             <div class="Units">
-                <p>Дмитрий Белоусов (Вокал), Андрей Вилкас (Гитара), Константин Павловский (Бас), М.Ф. (Ударные).</p>
+                <p>Дмитрий Белоусов (Вокал), Андрей Вилкас (Гитара), Константин Павловский (Бас), Max Vell (Ударные).</p>
                 <p>Фото: Алексеев Роман</p>
                    
             </div>
